# rost

./: Makefile.in  README  configure  configure.ac  datamodel.spec  install.sh  quagga-0.99.23-rost.patch  quagga-0.99.23.1-rost.patch  rost.conf.local
autom4te.cache/: output.0  traces.0
backend/: Makefile.in  auth.c  dhcp-client.c  dns.c  ethtool.c  interface.c  linux-tunnel.c  linux-tunnel.h  linux-vlan.c  ntp.c  quagga.c  snmp.c  syslog.c  system.c
frontend/: Makefile.in
frontend/ios/: Makefile.in  carp.interface.cpp  dhcp-client-interface.cpp  dns.config.cpp  grub.c  grub.config.cpp  ios-acl-extended.d2t  ios-acl-standard-named.d2t  ios-acl-standard.d2t  ios-config.c  ios-config.enable.cpp  ios-interface.d2t  ios-route-map.d2t  ios-router-bgp.d2t  ios-router-isis.d2t  ios-router-ospf.d2t  ios-router-rip.d2t  ios.all-config.cpp  ios.all.cpp  ios.base.cpp  ios.d2t  ios.enable.cpp  ios.h  ios_lvmap.c  ios_macros.h  linux-tunnel.c  linux-tunnel.config.cpp  linux-tunnel.interface.cpp  linux-vlan.c  linux-vlan.config.cpp  linux-vlan.interface.cpp  master.c  ntp.common.cpp  ntp.config.cpp  quagga.c  quagga.common.cpp  quagga.config.cpp  quagga.interface.cpp  quagga_acl.config.cpp  quagga_acl.extended.cpp  (+34 more)
frontend/lib/: Makefile.in  cli_auth.c  cli_auth.h  cli_curl.c  cli_curl.h  cli_ethtool.c  cli_ethtool.h  cli_expand.c  cli_expand.h  cli_file.c  cli_file.h  cli_interface.c  cli_interface.h  cli_procfs.c  cli_procfs.h  cli_quaggapi.c  cli_quaggapi.h  cli_system.c  cli_system.h
include/: osr_config.h.in  rost_config.h.in
lib/: Makefile.in  auth.h  ethtool.c  ethtool.h  grub.c  grub.h  interface.c  interface.h  linux-tunnel.h  linux-vlan.h  quaggapi.c  quaggapi.h  rost_macros.h  rost_syslog.h  syslog.c  system.c  system.h
